--- a/grid_world.ipynb
+++ b/grid_world.ipynb
@@ -66,7 +66,8 @@
     "        self.window_size = 512 # size of the PyGame window\n",
     "\n",
     "        # Observations are dictionaries with the agent's and the target's location.\n",
-    "        # Each location is encoded as an element of {0,...,'size'}^2, i.e. MultiDiscrete([size, size]).\n",
+    "        # A location is encoded as a tuple (x, y) of ints in {0,...,'size'-1}, i.e. MultiDiscrete([size, size]).\n",
+    "\n",
     "        self.observation_space = spaces.Dict(\n",
     "            {\n",
     "                \"agent\": spaces.Box(0, size - 1, shape=(2, ), dtype=int),\n",
