extend environment implementation with step() and reset()

--- a/grid_world.ipynb
+++ b/grid_world.ipynb
@@ -100,7 +100,55 @@
     "        first time.\n",
     "        \"\"\"\n",
     "        self.window = None\n",
-    "        self.clock = None"
+    "        self.clock = None\n",
+    "\n",
+    "    def _get_obs(self):\n",
+    "        return {\"agent\": self._agent_location, \"target\": self._target_location}\n",
+    "\n",
+    "    def _get_info(self):\n",
+    "        return {\n",
+    "            \"distance\": np.linalg.norm(self._agent_location - self._target_location, ord=1)\n",
+    "        }\n",
+    "    \n",
+    "    def reset(self, seed=None, options=None):\n",
+    "        # We need the following line to seed self.np_random\n",
+    "        super().reset(seed=seed)\n",
+    "\n",
+    "        # Choose the agent's location uniformly at random\n",
+    "        self._agent_location = self.np_random.integers(0, self.size, size=2, dtype=int)\n",
+    "\n",
+    "        # We will sample the target's location randomly until it does not coincide with the agent's location\n",
+    "        self._target_location = self._agent_location\n",
+    "        while np.array_equal(self._target_location, self._agent_location):\n",
+    "            self._target_location = self.np_random.integers(0, self.size, size=2, dtype=int)\n",
+    "        \n",
+    "        observation = self._get_obs()\n",
+    "        info = self._get_info()\n",
+    "\n",
+    "        if self.render_mode == \"human\":\n",
+    "            self._render_frame()\n",
+    "\n",
+    "        return observation, info\n",
+    "\n",
+    "    def step(self, action):\n",
+    "        # Map the action (element of {0, 1, 2, 3}) to the direction we walk in\n",
+    "        direction = self._action_to_direction[action]\n",
+    "        # We use 'np.clip' to make sure we don't leave the grid\n",
+    "        self._agent_location = np.clip(self._agent_location + direction, 0, self.size - 1)\n",
+    "        # An episode is done iff the agent has reached the target\n",
+    "        terminated = np.array_equal(self._agent_location)\n",
+    "        reward = 1 if terminated else 0 # Binary sparse rewards\n",
+    "        observation = self._get_obs()\n",
+    "        info = self._get_info()\n",
+    "\n",
+    "        if self.render_mode == \"human\":\n",
+    "            self._render_frame()\n",
+    "\n",
+    "        return observation, reward, terminated, False, info\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
