--- a/grid_world.ipynb
+++ b/grid_world.ipynb
@@ -145,7 +145,61 @@
     "            self._render_frame()\n",
     "\n",
     "        return observation, reward, terminated, False, info\n",
-    "        \n",
+    "\n",
+    "    # RENDERING\n",
+    "    # We use PyGame for rendering. A similar approach to rendering is used in many environments \n",
+    "    # that are included with Gymnasium and you can use it as a skeleton for your own environments.\n",
+    "    def render(self):\n",
+    "        if self.render_mode == \"rgb_array\":\n",
+    "            return self._render_frame()\n",
+    "\n",
+    "    def _render_frame(self):\n",
+    "        if self.window is None and self.render_mode == \"human\":\n",
+    "            pygame.init()\n",
+    "            pygame.display.init()\n",
+    "            self.window = pygame.display.set_mode((self.window_size, self.window_size))\n",
+    "        if self.clock is None and self.render_mode == \"human\":\n",
+    "            self.clock = pygame.time.Clock()\n",
+    "\n",
+    "        canvas = pygame.Surface((self.window_size, self.window_size))\n",
+    "        canvas.fill((255, 255, 255))\n",
+    "        pix_square_size = (self.window_size / self.size)  # The size of a single grid square in pixels\n",
+    "\n",
+    "        # First we draw the target\n",
+    "        pygame.draw.rect(canvas, (255, 0, 0), pygame.Rect(\n",
+    "                pix_square_size * self._target_location,\n",
+    "                (pix_square_size, pix_square_size),\n",
+    "            ),\n",
+    "        )\n",
+    "        # Now we draw the agent\n",
+    "        pygame.draw.circle(canvas, (0, 0, 255), (self._agent_location + 0.5) * pix_square_size, pix_square_size / 3)\n",
+    "\n",
+    "        # Finally, add some gridlines\n",
+    "        for x in range(self.size + 1):\n",
+    "            pygame.draw.line(canvas, 0, (0, pix_square_size * x), (self.window_size, pix_square_size * x), width=3)\n",
+    "            pygame.draw.line(canvas, 0, (pix_square_size * x, 0), (pix_square_size * x, self.window_size), width=3)\n",
+    "\n",
+    "        if self.render_mode == \"human\":\n",
+    "            # The following line copies our drawings from `canvas` to the visible window\n",
+    "            self.window.blit(canvas, canvas.get_rect())\n",
+    "            pygame.event.pump()\n",
+    "            pygame.display.update()\n",
+    "            # We need to ensure that human-rendering occurs at the predefined framerate.\n",
+    "            # The following line will automatically add a delay to keep the framerate stable.\n",
+    "            self.clock.tick(self.metadata[\"render_fps\"])\n",
+    "            \n",
+    "        else:  # rgb_array\n",
+    "            return np.transpose(np.array(pygame.surfarray.pixels3d(canvas)), axes=(1, 0, 2))\n",
+    "\n",
+    "    # The close method should close any open resources that were used by the environment. \n",
+    "    # In many cases, you don’t actually have to bother to implement this method. However, \n",
+    "    # in our example render_mode may be \"human\" and we might need to close the window that has been opened:\n",
+    "    def close(self):\n",
+    "        if self.window is not None:\n",
+    "            pygame.display.quit()\n",
+    "            pygame.quit()\n",
+    "\n",
+    "    \n",
     "\n",
     "\n",
     "\n"
